--- a/LightTube/Views/Account/Login.cshtml
+++ b/LightTube/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 		<div>
 			<form asp-action="Login" method="POST" class="login-form">
 				<h1>Log in</h1>
-				<input name="email" type="email" placeholder="Email">
+				<input name="userid" type="text" placeholder="UserID">
 				<input name="password" type="password" placeholder="Password">
 				<input type="submit" value="Login">
 			</form>
