--- a/LightTube/Views/Account/Register.cshtml
+++ b/LightTube/Views/Account/Register.cshtml
@@ -16,7 +16,7 @@
 		<div>
 			<form asp-action="Register" method="POST" class="login-form">
             	<h1>Register</h1>
-            	<input name="email" type="email" placeholder="Email">
+            	<input name="userid" type="text" placeholder="UserID">
             	<input name="password" type="password" placeholder="Password">
             	<input type="submit" value="Register">
             </form>
