--- a/LightTube/Views/Youtube/Embed.cshtml
+++ b/LightTube/Views/Youtube/Embed.cshtml
@@ -61,10 +61,6 @@
     @if (live)
     {
         <video class="embed" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
-            @foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-            {
-                @:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
-            }
         </video>
     }
     else
@@ -72,7 +68,7 @@
         <video class="embed" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
 	        @foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 	        {
-		        @:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
+	            @:<track src="/proxy/caption/@Model.Player.Id/@HttpUtility.UrlEncode(subtitle.Language).Replace("+", "%20")" label="@subtitle.Language" kind="subtitles">
 	        }
         </video>
     }
