--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -59,7 +59,7 @@
 					<video class="player" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
 						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 						{
-							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
+							@:<track src="/proxy/caption/@Model.Player.Id/@HttpUtility.UrlEncode(subtitle.Language).Replace("+", "%20")" label="@subtitle.Language" kind="subtitles">
 						}
 					</video>
 				}
