--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -56,7 +56,7 @@
 				}
 				else
 				{
-					<video class="player" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+					<video class="player" controls src="/proxy/media/@Model.Player.Id/@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution && x.FormatId != "17").FormatId)" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
 						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 						{
 							@:<track src="/proxy/caption/@Model.Player.Id/@HttpUtility.UrlEncode(subtitle.Language).Replace("+", "%20")" label="@subtitle.Language" kind="subtitles">
@@ -174,7 +174,7 @@
 			<div class="resolutions-list">
 				<h3>Change Resolution</h3>
 				<div>
-					@foreach (Format format in Model.Player.Formats)
+					@foreach (Format format in Model.Player.Formats.Where(x => x.FormatId != "17"))
 					{
 						@if (format.FormatNote == Model.Resolution)
 						{
