--- a/LightTube/Views/Youtube/Embed.cshtml
+++ b/LightTube/Views/Youtube/Embed.cshtml
@@ -105,7 +105,7 @@ else
             "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
             "embed": true,
             "live": false,
-            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault())"
         }, [
             @foreach(Format f in Model.Player.Formats.Reverse())
             {
@@ -135,7 +135,7 @@ else
             "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
             "embed": true,
             "live": false,
-            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault())"
         }, [
             @foreach(Format f in Model.Player.Formats.Reverse())
             {
