--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -290,7 +290,7 @@
     }, [
         @foreach (Format f in Model.Player.Formats.Reverse())
         {
-            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
+            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatName","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
         }
     ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd").then(x => player = x).catch(alert);
 </script>
@@ -320,7 +320,7 @@
     }, [
         @foreach (Format f in Model.Player.Formats.Reverse())
         {
-            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/media/@(Model.Player.Id)/@(f.FormatId)"},
+            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatName","src": "/proxy/media/@(Model.Player.Id)/@(f.FormatId)"},
         }
     ]);
 </script>
