--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -124,6 +124,8 @@
 		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/OTHERLIBS.md">How LightTube works</a><br>
 		<a href="https://gitlab.com/kuylar/lighttube">Source code</a>
 		<a href="https://gitlab.com/kuylar/lighttube/-/wikis/XML-API">API</a>
+		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/LICENSE">License</a><br>
+		<span style="font-weight: normal">Running on LightTube v@(Utils.GetVersion())</span>
 	</p>
 </div>
 
