--- a/LightTube/Views/Youtube/Embed.cshtml
+++ b/LightTube/Views/Youtube/Embed.cshtml
@@ -56,40 +56,37 @@
 </head>
 <body>
 
-@if (Model.Player.Formats.Length > 0 || live)
+@if (live)
 {
-    @if (live)
-    {
-        <video class="embed" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
-        </video>
-    }
-    else
-    {
-        <video class="embed" controls src="/proxy/media/@Model.Player.Id/@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).FormatId)" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
-	        @foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-	        {
-	            @:<track src="/proxy/caption/@Model.Player.Id/@HttpUtility.UrlEncode(subtitle.Language).Replace("+", "%20")" label="@subtitle.Language" kind="subtitles">
-	        }
-        </video>
-    }
+    <video class="player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+    </video>
+} 
+else if (Model.Player.Formats.Length > 0)
+{
+    <video class="player" controls src="/proxy/media/@Model.Player.Id/@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution && x.FormatId != "17").FormatId)" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+        @foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
+        {
+            @:<track src="/proxy/caption/@Model.Player.Id/@HttpUtility.UrlEncode(subtitle.Language).Replace("+", "%20")" label="@subtitle.Language" kind="subtitles">
+        }
+    </video>
 }
 else
 {
     canPlay = false;
-	<div id="player" class="player error embed" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-		@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
-		{
-			<span>
-				No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
-			</span>
-		}
-		else
-		{
-			<span>
-				@Model.Player.ErrorMessage
-			</span>
-		}
-	</div>
+    <div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+        @if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+        {
+            <span>
+                No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
+            </span>
+        }
+        else
+        {
+            <span>
+                @Model.Player.ErrorMessage
+            </span>
+        }
+    </div>
 }
 
 @if (canPlay)
