--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -253,9 +253,10 @@ a.icon-button, a.icon-button > img {
 /* watch page */
 
 .watch-page {
-    margin: 24px;
+    margin: auto;
     display: flex;
     flex-direction: row;
+    width: fit-content;
 }
 
 @media screen and (max-width: 1000px) {
