Multiple API changes
- JSON support, just add Accept: application/json to your headers
- Replace the User-Agent for authorized APIs with custom headers
- Re-add lost /locals endpoint

--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -15,11 +15,11 @@
 	DynamicItem[] contents;
 	try
 	{
-		contents = ((ItemSectionItem)((ItemSectionItem)Model.Channel.Videos[0]).Contents[0]).Contents;
+		contents = ((ItemSectionItem)((ItemSectionItem)Model.Channel.Contents[0]).Contents[0]).Contents;
 	}
 	catch
 	{
-		contents = Model.Channel.Videos;
+		contents = Model.Channel.Contents;
 	}
 }
 
