Slight CSS fixes
- Make sure compact renderers expand on mobile layout
- Fix description summary hitbox & change the cursor

--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -771,6 +771,9 @@ body.no-guide .guide {
 
 .info-container > .description > summary {
 	font-weight: bold;
+	margin: -16px;
+	padding: 16px;
+	cursor: pointer;
 }
 
 .info-container > .description > a {
