--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -11,7 +11,7 @@ html:root, html.theme-light:root {
 	--button-active-background: #e5e5e5;
 
 	--item-hover-background: #f2f2f2;
-	--item-active-background: #d9d9d9;;
+	--item-active-background: #d9d9d9;
 
 	--app-background: #f9f9f9;
 
@@ -62,7 +62,7 @@ html.theme-dark:root {
 	--button-active-background: #3d3d3d;
 
 	--item-hover-background: #0000;
-	--item-active-background: #3d3d3d;;
+	--item-active-background: #3d3d3d;
 
 	--app-background: #0f0f0f;
 
@@ -108,7 +108,7 @@ html.theme-dark:root {
 		--button-active-background: #e5e5e5;
 
 		--item-hover-background: #f2f2f2;
-		--item-active-background: #d9d9d9;;
+		--item-active-background: #d9d9d9;
 
 		--app-background: #f9f9f9;
 
@@ -161,7 +161,7 @@ html.theme-dark:root {
 		--button-active-background: #3d3d3d;
 
 		--item-hover-background: #0000;
-		--item-active-background: #3d3d3d;;
+		--item-active-background: #3d3d3d;
 
 		--app-background: #0f0f0f;
 
