--- a/LightTube/Views/Shared/Renderer.cshtml
+++ b/LightTube/Views/Shared/Renderer.cshtml
@@ -549,7 +549,7 @@
 						!.GetPlayerAsync(video.Id).Result;
 					InnerTubeNextResponse next = Context.RequestServices.GetService<InnerTube>()
 						!.GetVideoAsync(video.Id).Result;
-					PlayerContext playerContext = new(Context, player, next, "channel-promoted-video", false, "18");
+					PlayerContext playerContext = new(Context, player, next, "channel-promoted-video", false, "18", Array.Empty<SponsorBlockSegment>());
 				}
 				<partial name="Player" model="@playerContext"/>
 			</div>
