--- a/LightTube/Views/Settings/ImportExport.cshtml
+++ b/LightTube/Views/Settings/ImportExport.cshtml
@@ -5,7 +5,36 @@
 	Model.Title = "Account";
 }
 
-<h1 class="title">Account Settings</h1>
+<h1 class="title">Import Data</h1>
 
-<input name="file" type="file"/>
-<input type="submit"/>
+<div class="settings-option">
+	<div class="settings-option__info">
+		<div class="ml-2 title">
+			File
+		</div>
+		<div>
+			See below for supported formats
+		</div>
+	</div>
+	<div class="settings-option__option">
+		<input class="input-file" id="file" name="file" type="file"/>
+	</div>
+</div>
+<br/>
+<input class="btn-outline btn-blue" type="submit" value="Import Data"/>
+
+<h1 class="title">Export Data</h1>
+<a href="/export/fullData.json" class="btn-blue btn-outline">Export all data as JSON</a>
+
+<p>
+	<h1 class="title">Supported formats for importing</h1>
+	<ul>
+		<li>YouTube takeouts (.zip)</li>
+		<li>Invidious XML/OPML exports (.xml)</li>
+		<li>Invidious JSON exports (.json)</li>
+		<li>Piped playlists (.json)</li>
+		<li>Piped subscriptions (.json)</li>
+		<li>LightTube exports (.json)</li>
+	</ul>
+	If you need support for other websites/apps, please <a href="https://github.com/kuylar/LightTube/issues">open an issue on GitHub</a>
+</p>
