--- a/LightTube/Views/Shared/Player.cshtml
+++ b/LightTube/Views/Shared/Player.cshtml
@@ -138,12 +138,17 @@ else
 			fullscreen: '<svg class="bi" width="20" height="20" fill="currentColor"><use href="/svg/bootstrap-icons.svg#fullscreen"/></svg>',
 			minimize: '<svg class="bi" width="20" height="20" fill="currentColor"><use href="/svg/bootstrap-icons.svg#fullscreen-exit"/></svg>'
 		},
+		loading: "<img style='width:15%;height:15%;' src='/svg/loading.svg'>",
 		chapters: @Html.Raw(Model.GetChaptersJson()),
 		segments: [@Html.Raw(string.Join(',', Model.Sponsors?.Select(x => x.ToLTPlayerJson(Model.Player.Details.Length.TotalSeconds)) ?? Array.Empty<string>()))],
 		endscreen: @Html.Raw(JsonSerializer.Serialize(Model.Player.Endscreen, new JsonSerializerOptions()
 		           {
 			           PropertyNamingPolicy = JsonNamingPolicy.CamelCase
-		           }))
+		           })),
+		storyboard: {
+			type: "yt_l1",
+			src: "@Html.Raw(Model.Player.Storyboard.Levels[0].ToString())"
+		}
 	};
 	videoInfo.endscreen.onClickHandler = item => {
 		switch (item.style) {
