--- a/LightTube/Views/Settings/Appearance.cshtml
+++ b/LightTube/Views/Settings/Appearance.cshtml
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 	<div class="settings-option__option">
-		<input type="number" name="maxvideos" value="@Context.Request.Cookies["maxvideos"]" />
+		<input type="number" name="maxvideos" value="@(Context.Request.Cookies["maxvideos"] is null ? "5":Context.Request.Cookies["maxvideos"])" />
 	</div>
 </div>
 
