--- a/LightTube/Views/Shared/Player.cshtml
+++ b/LightTube/Views/Shared/Player.cshtml
@@ -60,7 +60,7 @@
 else if ((Model.UseHls || Model.UseDash) && !Model.Player.Formats.Any())
 {
 	<video controls id="player" class="player @(Model.GetClass())" poster="@Model.Thumbnails.LastOrDefault()?.Url">
-		@if (Configuration.GetVariable("LIGHTTUBE_DISABLE_PROXY", "false") != "false")
+		@if (Configuration.ProxyEnabled)
 		{
 			@foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
@@ -85,7 +85,7 @@ else if ((Model.UseHls || Model.UseDash) && !Model.Player.Formats.Any())
 else if (Model.Player.Formats.Any())
 {
 	<video controls id="player" class="player @(Model.GetClass())" poster="@Model.Thumbnails.LastOrDefault()?.Url">
-		@if (Configuration.GetVariable("LIGHTTUBE_DISABLE_PROXY", "false") != "false")
+		@if (Configuration.ProxyEnabled)
 		{
 			@foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
