--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -202,7 +202,6 @@ html, body {
     box-sizing: border-box;
     color: var(--text-secondary);
     height: 100%;
-    overflow-y: hidden;
     background-color: var(--app-background);
 }
 
@@ -251,28 +250,44 @@ svg {
 
 /* Layout */
 
+.top-bar {
+    height: 56px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    background-color: var(--app-background);
+}
+
+.guide {
+    background-color: var(--app-background);
+}
+
 .app {
-    overflow-y: scroll;
     overflow-x: hidden;
 }
 
 @media screen and (min-width: 700px) {
-    body {
-        display: grid;
-        grid-auto-columns: 1fr;
-        grid-template-columns: 240px 1fr;
-        grid-template-rows: 56px 1fr;
-        grid-template-areas: "top-bar top-bar" "guide app";
+    .app {
+        margin-left: 240px;
+    }
+
+    .guide {
+        width: 240px;
     }
 }
 
 @media screen and (min-width: 700px) and (max-width: 1312px) {
-    body {
-        display: grid;
-        grid-auto-columns: 1fr;
-        grid-template-columns: 72px 1fr;
-        grid-template-rows: 56px 1fr;
-        grid-template-areas: "top-bar top-bar" "guide app";
+    .app {
+        margin-left: 72px;
+    }
+
+    .guide {
+        width: 72px;
     }
 }
 
@@ -284,33 +299,18 @@ svg {
         display: none !important;
     }
 
-    .top-bar {
-        grid-area: top-bar;
-
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
     .guide {
-        grid-area: guide;
+        position: fixed;
+        top: 56px;
+        bottom: 0;
     }
 
     .app {
-        grid-area: app;
+        margin-top: 56px;
     }
 }
 
 @media screen and (max-width: 700px) {
-    body {
-        display: grid;
-        width: 100vw;
-        grid-auto-columns: 100vw;
-        grid-template-columns: 240px 1fr;
-        grid-template-rows: 56px 1fr;
-        grid-template-areas: "top-bar" "app" "guide";
-    }
-
     .hide-on-mobile {
         display: none !important;
     }
@@ -319,27 +319,26 @@ svg {
     }
 
     .top-bar {
-        grid-area: top-bar;
-
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        width: 100vw;
+        border-bottom: 1px solid var(--border-color);
     }
 
     .guide {
-        grid-area: guide;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-evenly;
         border-top: 1px solid var(--border-color);
         width: 100vw;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 
     .app {
-        grid-area: app;
         width: 100vw;
+        margin-top: 56px;
+        padding-bottom: 48px;
     }
 }
 
@@ -351,6 +350,10 @@ body.no-guide {
 
 body.no-guide .guide {
     display: none;
+}
+
+body.no-guide .app {
+    margin-left: 0;
 }
 
 /* Guide */
@@ -993,6 +996,7 @@ input#comments-toggle {
     .comments-container {
         display: none;
     }
+
     input#comments-toggle:checked ~ .comments-container {
         display: block;
     }
