--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -17,7 +17,10 @@
 	<link rel="stylesheet" href="~/css/lighttube.css?v=@Utils.GetVersion()">
 	<link rel="stylesheet" href="~/css/renderers.css?v=@Utils.GetVersion()">
 	<link rel="stylesheet" href="~/fonts/roboto/roboto.css">
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="https://@Context.Request.Host.Value/feed/rss.xml">
+	@foreach (IHtmlContent item in Model.rssElement)
+	{
+		@item
+	}
 	@if (Configuration.GetVariable("LIGHTTUBE_CUSTOM_CSS_PATH") != null)
 	{
 		<link rel="stylesheet" href="/css/custom.css">
