--- a/LightTube/Views/Shared/_SettingsLayout.cshtml
+++ b/LightTube/Views/Shared/_SettingsLayout.cshtml
@@ -3,11 +3,11 @@
 
 @{
 	SettingsTab[] tabs =
-	{
-		new("Account", "/settings/account"),
-		new("Appearance", "/settings/appearance"),
-		new("Import/Export", "/settings/data")
-	};
+	[
+		new SettingsTab(Model.Localization.GetRawString("settings.account.htmltitle"), "/settings/account"),
+		new SettingsTab(Model.Localization.GetRawString("settings.appearance.title"), "/settings/appearance"),
+		new SettingsTab(Model.Localization.GetRawString("settings.import.htmltitle"), "/settings/data")
+	];
 }
 
 <!DOCTYPE html>
@@ -35,7 +35,7 @@
 	<a class="logo" href="/">
 		Light<b>Tube</b>
 		<sup class="hide-on-mobile region" title="InnerTube Content Region">
-			@Context.GetRegion()
+			@Context.GetInnerTubeRegion()
 		</sup>
 	</a>
 	<div class="flex-divider hide-on-mobile"></div>
